hphp/hack/test/typecheck/reified_generics/method_soft_reification.php.exp
File "method_soft_reification.php", line 16, characters 3-15:
All type arguments must be specified because a type parameter is reified (Typing[4303])
  File "method_soft_reification.php", line 6, characters 19-25:
  Definition is here
